# docs/backend/openapi.yaml
@@ -1717,7 +1717,7 @@ components:
           $ref: '#/components/schemas/GymGradeReference'
     GymReference:
       type: object
-      required: [id, name, branchName]
+      required: [id, name, branchName, logo]
       properties:
         id:
           type: string
@@ -1726,6 +1726,8 @@ components:
           type: string
         branchName:
           type: [string, 'null']
+        logo:
+          oneOf: [{ $ref: '#/components/schemas/MediaReference' }, { type: 'null' }]
     MembershipReference:
       type: object
       required: [id, name]
